alterações nas fotos

--- a/gaeel.html
+++ b/gaeel.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
-    
+    <link rel="icon" type="image/png" href="imagens/logo gaeel sem fundo.png">
     <!-- Lucide Icons -->
     <script src="https://unpkg.com/lucide@latest"></script>
     
@@ -126,7 +126,7 @@
             <div class="about-grid">
                 <!-- Image -->
                 <div class="about-image">
-                    <img src="https://images.unsplash.com/photo-1459865264687-595d652de67e?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&q=80&w=800" 
+                    <img src="imagens/trofeus.png" 
                          alt="Futebol" class="rounded-image">
                 </div>
 
@@ -214,7 +214,7 @@
                 <!-- Championship Card 1 -->
                 <div class="championship-card">
                     <div class="championship-image">
-                        <img src="imagens/ARTE SUPER COPA EMBAÚBA-SP.png" 
+                        <img src="imagens/campeonato starkids.png" 
                              alt="Copa GAEEL 2026">
                         <span class="badge badge-success">Inscrições Abertas</span>
                         <div class="championship-overlay"></div>
@@ -225,7 +225,7 @@
 
                     <div class="card-content">
                         <span class="category-badge">Profissional</span>
-                        <h3 class="card-title">Copa Futsal StarKids 2026</h3>
+                        <h3 class="card-title">Copa Mini Campo StarKids 2026</h3>
 
                         <div class="card-info">
                             <div class="info-item">
@@ -252,7 +252,7 @@
                 <!-- Championship Card 2 -->
                 <div class="championship-card">
                     <div class="championship-image">
-                        <img src="https://images.unsplash.com/photo-1760420925915-c9df8825ebb0?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&q=80&w=600" 
+                        <img src="imagens/campeonato starkids futsal.png" 
                              alt="Campeonato Regional">
                         <span class="badge badge-success">Inscrições Abertas</span>
                         <div class="championship-overlay"></div>
@@ -263,7 +263,7 @@
 
                     <div class="card-content">
                         <span class="category-badge">Amador</span>
-                        <h3 class="card-title">Campeonato Regional</h3>
+                        <h3 class="card-title">Copa Futsal StarKids 2026</h3>
 
                         <div class="card-info">
                             <div class="info-item">
