adicionando cores, e imagens, adicionando tbm, área de "conheça nosso patrocinadores"

--- a/gaeel.html
+++ b/gaeel.html
@@ -67,7 +67,7 @@
     <section id="hero" class="hero">
         <!-- Background Image with Overlay -->
         <div class="hero-bg">
-            <img src="https://images.unsplash.com/photo-1705593813682-033ee2991df6?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&q=80&w=1920" 
+            <img src="imagens/campo de futebol.jpg"
                  alt="Estádio" class="hero-bg-img">
             <div class="hero-overlay"></div>
         </div>
@@ -335,6 +335,7 @@
             </div>
         </div>
     </section>
+    
 
     <!-- Courses Section -->
     <section id="cursos" class="section bg-gradient">
@@ -544,6 +545,35 @@
                     Conecte sua marca a milhares de apaixonados por futebol
                 </p>
             </div>
+ <!-- Sponsors Carousel -->
+<div class="sponsors-carousel">
+    
+    <div class="carousel-header">
+        <h3 class="carousel-title">Conheça nossos patrocinadores</h3>
+        <p class="carousel-subtitle">Marcas que impulsionam o futebol junto com a GAEEL</p>
+    </div>
+
+    <div class="carousel-wrapper">
+        <div class="carousel-track">
+
+            <!-- LOGOS (adicione as reais depois) -->
+            <div class="carousel-item"><img src="imagens/patrocinador NDU.png" alt="Patrocinador"></div>
+            <div class="carousel-item"><img src="imagens/patro2.png" alt="Patrocinador"></div>
+            <div class="carousel-item"><img src="imagens/patro3.png" alt="Patrocinador"></div>
+            <div class="carousel-item"><img src="imagens/patro4.png" alt="Patrocinador"></div>
+            <div class="carousel-item"><img src="imagens/patro5.png" alt="Patrocinador"></div>
+
+            <!-- DUPLICAÇÃO PARA LOOP INFINITO -->
+            <div class="carousel-item"><img src="imagens/patro1.png" alt="Patrocinador"></div>
+            <div class="carousel-item"><img src="imagens/patro2.png" alt="Patrocinador"></div>
+            <div class="carousel-item"><img src="imagens/patro3.png" alt="Patrocinador"></div>
+            <div class="carousel-item"><img src="imagens/patro4.png" alt="Patrocinador"></div>
+            <div class="carousel-item"><img src="imagens/patro5.png" alt="Patrocinador"></div>
+
+        </div>
+    </div>
+
+</div>
 
             <!-- Stats Banner -->
             <div class="stats-banner">
@@ -717,7 +747,7 @@
             </div>
         </div>
     </section>
-
+   
     <!-- Club Area Section -->
     <section id="area-clube" class="section bg-white">
         <div class="container">
