--- a/gaeel.html
+++ b/gaeel.html
@@ -1009,7 +1009,16 @@
                     <h4 class="footer-heading">Suporte</h4>
                     <ul class="link-list">
                         <li><a href="#" class="footer-link">Central de Ajuda</a></li>
-                        <li><a href="#" class="footer-link">Regulamentos</a></li>
+                        <li>
+    <details class="footer-dropdown">
+        <summary class="footer-link">Regulamentos</summary>
+        <ul class="reg-list">
+            <li><a href="regularmento/REGULAMENTO ESPECÍFICO NDU 2026.pdf" target="_blank" class="footer-link">NDU</a></li>
+            <li><a href="regularmento/GAEEL- REGULAMENTO ESPECIFICO STAR KIDS.pdf" target="_blank" class="footer-link">STARKIDS Específico</a></li>
+            <li><a href="regularmento/GAEEL- REGULAMENTO GERAL STAR KIDS (1).pdf" target="_blank" class="footer-link">STARKIDS Geral</a></li>
+        </ul>
+    </details>
+</li>
                         <li><a href="#" class="footer-link">Termos de Uso</a></li>
                         <li><a href="#" class="footer-link">Política de Privacidade</a></li>
                     </ul>
