DOCUMENTO de PRIVACIDADE

--- a/gaeel.html
+++ b/gaeel.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="GAEEL - Gestão Profissional de Campeonatos de Futebol">
+    <meta name="description" content="GAEEL - Gestão de Campeonatos Esportivos">
     <meta name="theme-color" content="#001F3F">
 
     <!-- Open Graph / Social -->
-    <meta property="og:title" content="GAEEL - Gestão de Campeonatos de Futebol">
+    <meta property="og:title" content="GAEEL - Gestão de Campeonatos Esportivos">
     <meta property="og:description" content="Organização profissional de competições esportivas para clubes de todo o Brasil.">
     <meta property="og:image" content="imagens/logo gaeel sem fundo.png">
     <meta property="og:url" content="https://seusite.com">
@@ -1020,7 +1020,7 @@
     </details>
 </li>
                         <li><a href="#" class="footer-link">Termos de Uso</a></li>
-                        <li><a href="#" class="footer-link">Política de Privacidade</a></li>
+                        <li><a href="regularmento/Politica de Privacidade GAEEL.pdf" target="_blank" class="footer-link">Política de Privacidade</a></li>
                     </ul>
                 </div>
             </div>
